Fix question heading spacing

--- a/app/questions/_components/Question.module.css
+++ b/app/questions/_components/Question.module.css
@@ -2,4 +2,5 @@
   color: black;
   font-weight: 600;
   font-size: 24px;
+  margin-bottom: 48px;
 }
